Many improvements to the handling of messages and users and various other things that have been done since the last commit

--- a/App.xaml
+++ b/App.xaml
@@ -12,7 +12,7 @@
         <!--Required object that handles lifetime events for the application-->
         <shell:PhoneApplicationService 
             Launching="Application_Launching" Closing="Application_Closing" 
-            Activated="Application_Activated" Deactivated="Application_Deactivated"/>
+            Activated="ApplicationActivated" Deactivated="ApplicationDeactivated"/>
     </Application.ApplicationLifetimeObjects>
 
 </Application>
