--- a/Connecting.xaml
+++ b/Connecting.xaml
@@ -11,7 +11,8 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True">
+    shell:SystemTray.IsVisible="True"
+    shell:SystemTray.Opacity="0">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid>
@@ -23,6 +24,6 @@
                 <GradientStop Color="#FFC9C9C9" Offset="1.0" />
             </LinearGradientBrush>
         </Grid.Background>
-        <Image VerticalAlignment="Top" Margin="0,20" Height="100" Source="/Images/cloudsdale-thin-bright-logo.png" />
+        <Image VerticalAlignment="Top" Margin="0,20" Source="/Images/cloudsdale-thin-bright-logo.png" />
     </Grid>
 </phone:PhoneApplicationPage>
