--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -11,7 +11,8 @@
     FontSize="28"
     Foreground="#FF404040"
     SupportedOrientations="Portrait" Orientation="Portrait"
-    shell:SystemTray.IsVisible="True" >
+    shell:SystemTray.IsVisible="True"
+    shell:SystemTray.Opacity="0" >
 
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
@@ -23,8 +24,7 @@
             </LinearGradientBrush>
         </Grid.Background>
         <Grid VerticalAlignment="Top">
-            <Image VerticalAlignment="Top" Margin="0,20" Height="100" Source="/Images/cloudsdale-thin-bright-logo.png" />
-
+            <Image VerticalAlignment="Top" Margin="0,20" Source="/Images/cloudsdale-thin-bright-logo.png" />
         </Grid>
 
         <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Collapsed">
