--- a/Home.xaml
+++ b/Home.xaml
@@ -24,7 +24,7 @@
     </phone:PhoneApplicationPage.Resources>
 
     <Grid x:Name="LayoutRoot" Background="{StaticResource PortraitBackground}" Margin="0,0,0,0">
-        <controls:Pivot Title="Cloudsdale" Name="pivotView">
+        <controls:Pivot Title="Cloudsdale" Name="pivotView" Margin="0,10,0,0">
             <controls:Pivot.HeaderTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding}" FontFamily="Segoe WP Bold" FontSize="48"/>
@@ -54,7 +54,7 @@
                 </StackPanel>
             </controls:PivotItem>
             <controls:PivotItem Header="Clouds">
-                <Grid Margin="-12,-30,-12,0">
+                <Grid Margin="-12,-26,-12,0">
                     <ScrollViewer Margin="12,0,12,50">
                         <ItemsControl x:Name="CloudList" Margin="0,15,0,0" />
                     </ScrollViewer>
@@ -67,7 +67,7 @@
             </controls:PivotItem>
             <controls:PivotItem Header="Explore" Foreground="Black" Visibility="Collapsed" IsEnabled="False">
                 <Grid>
-                    <Grid Margin="-12,-30" Height="110" VerticalAlignment="Top">
+                    <Grid Margin="-12,-26,-12,-30" Height="110" VerticalAlignment="Top">
                         <Grid.Background>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                 <GradientStop Color="#FFF0F0F0" Offset="1" />
@@ -82,7 +82,7 @@
                             <Image Source="/Images/Icons/search.png" Width="50" />
                         </Button>
                     </Grid>
-                    <ScrollViewer Margin="0,50,0,50">
+                    <ScrollViewer Margin="0,54,0,50">
                         <ItemsControl x:Name="searchResults">
                             <TextBlock Text="Loading..." />
                         </ItemsControl>
