--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -7,8 +7,7 @@
     xmlns:controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:Generic="clr-namespace:System.Collections.Generic;assembly=System"
-    xmlns:System="clr-namespace:System;assembly=mscorlib" xmlns:Cloudsdale="clr-namespace:Cloudsdale" mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
+    mc:Ignorable="d" d:DesignWidth="480" d:DesignHeight="768"
     FontFamily="Segoe WP Bold"
     FontSize="28"
     Foreground="Black"
