--- a/Clouds.xaml
+++ b/Clouds.xaml
@@ -34,24 +34,24 @@
             <controls:PivotItem x:Name="chatTab" Header="Chat">
                 <Grid Margin="0,-30,0,0">
                     <Grid VerticalAlignment="Bottom" Height="100" Margin="-12,0">
-                        <Grid.Background>
+                        <!--<Grid.Background>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                 <GradientStop Color="#FFF0F0F0" Offset="0.0" />
                                 <GradientStop Color="#FFC7C7C7" Offset="0.4" />
                                 <GradientStop Color="#FFC7C7C7" Offset="1" />
                             </LinearGradientBrush>
-                        </Grid.Background>
+                        </Grid.Background>-->
                         <TextBox VerticalAlignment="Bottom" x:Name="SendBox" InputScope="Chat"
-                                 KeyDown="SendBoxKeyDown" DoubleTap="SendBoxDoubleTap" Tap="SendBoxTap" />
+                                 KeyDown="SendBoxKeyDown" DoubleTap="SendBoxDoubleTap" Tap="SendBoxTap" BorderBrush="#888888"/>
                     </Grid>
-                    <Grid VerticalAlignment="Top" Height="50" Margin="-12,0">
+                    <!--<Grid VerticalAlignment="Top" Height="50" Margin="-12,0">
                         <Grid.Background>
                             <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
                                 <GradientStop Color="#FFC0C0C0" Offset="0.0" />
                                 <GradientStop Color="#00C0C0C0" Offset="1.0" />
                             </LinearGradientBrush>
                         </Grid.Background>
-                    </Grid>
+                    </Grid>-->
                     <ScrollViewer x:Name="ChatScroller" 
                                    Margin="0,0,0,64" Tap="ChatScrollerTap">
                         <ItemsControl x:Name="Chats">
