--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -16,8 +16,14 @@
 
     <Grid x:Name="LayoutRoot">
         <Grid.Background>
-            <ImageBrush ImageSource="/SplashScreenImage.jpg" />
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1" >
+                <GradientStop Offset=".15" Color="#FF1A91DB" />
+                <GradientStop Offset=".15" Color="#FFF0F0F0" />
+            </LinearGradientBrush>
         </Grid.Background>
+        <Grid VerticalAlignment="Top" Margin="0,20,0,0">
+            <Image Source="/Images/cloudsdale-thin-bright-logo.png" />
+        </Grid>
 
         <Grid x:Name="ContentPanel" Margin="12,150,12,0" Visibility="Collapsed">
             <TextBox InputScope="EmailNameOrAddress" Name="UserBox" VerticalAlignment="Top" 
